add events processor
